--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,97 @@ button {
     background-position: -36px -30px;
 }
 
+/*---- Menu ----*/
+.menu-button {
+    display: block;
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    left: 0;
+    top: 0;
+    z-index: 8000;
+}
+.menu-button span {
+    display: block;
+    position: absolute;
+    width: 22px;
+    height: 3px;
+    left: 17px;
+    top: 25px;
+    background: #b8b8b8;
+    text-indent: -9999px;
+    z-index: 10;
+}
+.menu-button span:before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 22px;
+    height: 3px;
+    left: 0;
+    top: -8px;
+    background: #b8b8b8;
+    z-index: 20;
+}
+.menu-button span:after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 22px;
+    height: 3px;
+    left: 0;
+    bottom: -8px;
+    background: #b8b8b8;
+    z-index: 20;
+}
+.menu {
+    display: block;
+    position: fixed;
+    width: 220px;
+    height: 100%;
+    left: 0;
+    top: 0;
+    margin-left: -220px;
+    background: #fff;
+    z-index: 2000;
+    -webkit-transition: all .5s ease-out;
+    transition: all .5s ease-out;
+}
+.menu.show {
+    -webkit-transform: translateX(220px);
+    transform: translateX(220px);
+}
+.menu h2 {
+    padding: 15px 0;
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+}
+.menu h2 a {
+    display: block;
+    width: 77px;
+    height: 100px;
+    margin: 0 auto;
+    text-indent: -9999px;
+    background: url(img/logo.png);
+    background-size: 77px 100px;
+}
+.menu ul li {
+    margin-bottom: 5px;
+}
+.menu nav {
+    display: block;
+    width: 100%;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+}
+.menu ul li a {
+    display: block;
+    height: 40px;
+    padding-left: 20px;
+    line-height: 40px;
+    font-size: 13px;
+    color: #747474
+}
+
 /*---- main  ----*/
 .main {
     position: relative;
@@ -127,10 +218,12 @@ button {
     position: absolute;
     width: 100%;
     height: 100%;
+    left: 0;
+    top: 0;
     background: rgba(255,255,255,0.5);
     visibility: hidden;
     opacity: 0;
-    z-index: 50;
+    z-index: 150;
     -webkit-transition: all .5s ease-out;
     transition: all .5s ease-out;
 }
@@ -138,10 +231,28 @@ button {
     visibility: visible;
     opacity: 1;
 }
+.main-mask {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background:rgba(37,44,57,0.5);
+    visibility: hidden;
+    opacity: 0;
+    z-index: 1500;
+    -webkit-transition: all .5s ease-out;
+    transition: all .5s ease-out;
+}
+.main-mask.show {
+    visibility: visible;
+    opacity: 1;
+}
 #flux-site {
     position: relative;
     margin: 0;
-    z-index: 100;
+    z-index: 160;
 }
 .partie .block-content .content-partie {
     position: relative;
@@ -387,10 +498,11 @@ button {
 .portrait-box .gif {
     position: absolute;
     width: 60%;
-    left: 20%;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
+    max-width: 400px;
+    left: 50%;
+    top: 60%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 .portrait-box .gif p {
     margin-bottom: 25px;
