--- a/css/style.css
+++ b/css/style.css
@@ -374,17 +374,21 @@ button {
     overflow: hidden;
 }
 #equipe .block-content .content-partie .intro-partie .first-photo {
-    width: 288px;
-    height: 360px;
-    overflow: hidden;
     position: absolute;
-    top: 5px;
-    left: 5px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
     z-index: 10;
-    display: block
 }
 #equipe.active .block-content .content-partie .intro-partie .first-photo {
     display: none
+}
+#equipe.active .block-content .content-partie .intro-partie .first-photo img {
+    display: block;
+    width: 100%;
+    height: auto;
 }
 #equipe .block-content .content-partie .intro-partie .anim-photo {
     position: absolute;
