--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
     margin: 0;
     padding: 0;
     font-size: 16px;
-    font-family: Tahoma, Arial, Helvetica, Sans-serif;
+    font-family: Tahoma, Arial, Helvetica, "微软雅黑", Sans-serif;
     color: #000;
 }
 ul, li {
@@ -72,8 +72,8 @@ button {
 /*---- z-index ----*/
 
 /*---- background ----*/
-.close:after, #equipe .block-content .content-partie .intro-partie footer li:before {
-    background: url(img/icon.png);
+.close:after, .game-guide .inner p span:before {
+    background-image: url(img/icon.png);
     background-size: 80px 45px;
 }
 
@@ -294,7 +294,83 @@ button {
     transform: rotate(30deg) translate(0, 0);
 }
 
-
+/*---- Game Guide  ----*/
+.game-guide {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    visibility: hidden;
+    opacity: 0;
+    background: rgba(255,255,255,0.5);
+    z-index: 250;
+    -webkit-transition: all .3s ease-out;
+    transition: all .3s ease-out;
+}
+.game-guide.show {
+    visibility: visible;
+    opacity: 1;
+}
+.game-guide .inner {
+    display: block;
+    position: fixed;
+    width: 250px;
+    height: 250px;
+    left: 50%;
+    top: 50%;
+    background-image: url(img/bg_03.png);
+    background-repeat: repeat-x;
+    background-size: 1px 100%;
+    background-color: #fff;
+    text-align: center;
+    opacity: 0;
+    -webkit-transform: translate(-50%, -65%);
+    transform: translate(-50%, -65%);
+    -webkit-transition: all .3s ease-out .3s;
+    transition: all .3s ease-out .3s;
+}
+.game-guide.show .inner {
+    opacity: 1;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+.game-guide .inner p {
+    position: absolute;
+    width: 100%;
+    left: 50%;
+    top: 50%;
+    font-size: 16px;
+    line-height: 20px;
+    color: #717171;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+.game-guide .inner p span {
+    display: block;
+}
+.game-guide .inner p span:nth-child(1) {
+    margin-bottom: 25px;
+}
+.game-guide .inner p span:nth-child(1):before {
+    content: "";
+    display: block;
+    width: 28px;
+    height: 34px;
+    margin: 0 auto 15px auto;
+    background-size: 160px 90px;
+    background-position: -100px -56px;
+}
+.game-guide .inner p span:nth-child(2):before {
+    content: "";
+    display: block;
+    width: 32px;
+    height: 34px;
+    margin: 0 auto 15px auto;
+    background-size: 160px 90px;
+    background-position: -128px -56px;
+}
 /*---- main  ----*/
 .main {
     position: relative;
@@ -739,5 +815,21 @@ button {
 @media screen and (orientation:landscape) and (min-width:480px) and (max-width:960px) {
     .portrait-box {
         display: none;
+    }
+}
+
+@media (max-width: 480px) {
+    .game-guide .inner p {
+        font-size: 12px;
+        line-height: 16px;
+    }
+    .game-guide .inner p span:nth-child(1) {
+        margin-bottom: 15px;
+    }
+    .game-guide .inner p span:nth-child(1):before {
+        margin: 0 auto 10px auto;
+    }
+    .game-guide .inner p span:nth-child(2):before {
+        margin: 0 auto 10px auto;
     }
 }
