--- a/css/style.css
+++ b/css/style.css
@@ -673,7 +673,7 @@ button {
 }
 /*---- tc ----*/
 .tc {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     left: 0;
@@ -681,10 +681,10 @@ button {
     margin-left: 100%;
     background: #fff;
     overflow: hidden;
-    z-index: 1300;
+    z-index: 9900;
     -box-sizing: border-box;
-    -webkit-transition: -webkit-transform 1s ease-out;
-    transition: transform 1s ease-out;
+    -webkit-transition: -webkit-transform .5s ease-out;
+    transition: transform .5s ease-out;
 }
 .tc.show {
     -webkit-transform: translateX(-100%);
