--- a/css/style.css
+++ b/css/style.css
@@ -748,7 +748,7 @@ button {
     overflow: hidden;
     z-index: 9900;
     -box-sizing: border-box;
-    -webkit-transition: -webkit-transform .5s ease-out;
+    -webkit-transition: transform .5s ease-out;
     transition: transform .5s ease-out;
 }
 .tc.show {
