--- a/css/style.css
+++ b/css/style.css
@@ -748,22 +748,23 @@ button {
 }
 /*---- tc ----*/
 .tc {
+    display: none;
     position: fixed;
     width: 100%;
     height: 100%;
     left: 0;
     top: 0;
-    margin-left: 100%;
+    /*margin-left: 100%;*/
     background: #fff;
     overflow: hidden;
     z-index: 9900;
     -box-sizing: border-box;
-    -webkit-transition: transform .5s ease-out;
-    transition: transform .5s ease-out;
+    /*-webkit-transition: transform .5s ease-out;
+    transition: transform .5s ease-out;*/
 }
 .tc.show {
-    -webkit-transform: translateX(-100%);
-    transform: translateX(-100%);
+    /*-webkit-transform: translateX(-100%);
+    transform: translateX(-100%);*/
 }
 .tc h4 {
     height: 50px;
